--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1488,3 +1488,11 @@ div.moduletable-headlines p {margin: 5px 0; border-bottom: 1px dashed #999;}
 div#content p.readmore	{text-align:right;margin-top:0;}
 
 .banneritem img	{border-radius: 4px;}
+
+/*
+ * JoomShopping
+ */
+.address_block .jshop_register .name {
+    white-space: nowrap;
+    padding-right: 20px;
+}
