--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -302,7 +302,9 @@ letter-spacing: 0px;
 font-weight: bold;
 text-align: left;
 }
-
+#content h2 {
+	margin-top: 4em;
+}
 #logo h2 {
   line-height: 1.1;
 	font-size: 42px;
@@ -744,7 +746,8 @@ a img {
 ul.actions {
         text-align:left;
         padding:0 ;
-        margin:0
+        margin:0;
+        float:right;
 }
 
 ul.actions li {
