--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -302,9 +302,12 @@ letter-spacing: 0px;
 font-weight: bold;
 text-align: left;
 }
-#content h2 {
+.items-leading h2 {
 	margin-top: 4em;
 	clear:both;
+}
+.items-leading .leading-0 h2 {
+	margin-top: 0;
 }
 #logo h2 {
   line-height: 1.1;
