--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -302,6 +302,9 @@ letter-spacing: 0px;
 font-weight: bold;
 text-align: left;
 }
+.blog h2 {
+	clear:both
+}
 .items-leading h2 {
 	margin-top: 4em;
 	clear:both;
