--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -303,7 +303,7 @@ font-weight: bold;
 text-align: left;
 }
 .blog h2 {
-	clear:both
+	clear:both;
 }
 .items-leading h2 {
 	margin-top: 4em;
@@ -1523,4 +1523,11 @@ form#donation {
 }
 form#donation legend {
 	font-weight: bold;
+}
+
+/*
+ * Get rid of the horrible "novo" link
+ */
+.category-list .cat-items {
+	display: none;
 }
