--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -302,7 +302,7 @@ letter-spacing: 0px;
 font-weight: bold;
 text-align: left;
 }
-.blog h2, .blog-featured .item {
+.blog h2, .blog-featured .item.column-1 {
 	clear:both;
 }
 .items-leading h2 {
