read versions from github api

--- a/LigminchaGlobalApp/templates/server-popup.html
+++ b/LigminchaGlobalApp/templates/server-popup.html
@@ -10,8 +10,7 @@
 		<tr>
 			<th>Joomla version:</th>
 			<td>
-				<%=lg.selectList({type: LG_VERSION},{id:'versions'},data.ref1)%></select>
-				<button class="new-version">New...</button>
+				<select><%=lg.tagList()%></select>
 			</td>
 		</tr>
 	</table>
