--- a/LigminchaGlobalApp/templates/user-popup.html
+++ b/LigminchaGlobalApp/templates/user-popup.html
@@ -1,7 +1,7 @@
 <div id="server-popup">
 	<h1><%-data.realname%></h1>
 	<table class="user">
-		<tr><th>Username:</th><td><%_.capitalize(data.username)%></td></tr>
+		<tr><th>Username:</th><td><%data.username.ucfirst()%></td></tr>
 		<tr><th>Email:</th><td><a href="mailto:<%-data.email%>"><%-data.email%></a></td></tr>
 		<tr><th>Global ID:</th><td><%data.id.substr(0,5)%></td></tr>
 	</table>
