--- a/LigminchaGlobalApp/templates/user-popup.html
+++ b/LigminchaGlobalApp/templates/user-popup.html
@@ -3,6 +3,6 @@
 	<table class="user">
 		<tr><th>Username:</th><td><%data.username.ucfirst()%></td></tr>
 		<tr><th>Email:</th><td><a href="mailto:<%-data.email%>"><%-data.email%></a></td></tr>
-		<tr><th>Global ID:</th><td><%data.id.substr(0,5)%></td></tr>
+		<tr><th>Global ID:</th><td><%id.substr(0,5)%></td></tr>
 	</table>
 </div>
