--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -11,7 +11,7 @@ div.map {
  */
 div.loader {
 	width: 100%;
-	height: 100%;
+	height: 100px;
 	background: url(../images/loader.gif) no-repeat center;
 }
 
