--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -12,7 +12,7 @@ div.map {
 div.loading {
 	width: 100%;
 	height: 100px;
-	background: #ccc url(../images/loader.gif) no-repeat center;
+	background: url(../images/loader.gif) no-repeat center;
 }
 
 /**
