--- a/LigminchaGlobalApp/templates/welcome-user.html
+++ b/LigminchaGlobalApp/templates/welcome-user.html
@@ -1,6 +1,7 @@
 <div class="user">
 	<h1>Welcome <%-data.realname%>!</h1>
 	<p>This is the demonstration site for the Ligmincha Global application.</p>
+	<p>You are signed in to this application with the Ligmincha Global SSO (single sign-on) system.</p>
 	<p>For information about how to use this site and what exactly it's demonstrating, please see the
 	<a href="http://wiki.ligmincha.org/LigminchaGlobal_demonstration">Ligmincha Global_demonstration</a>
 	wiki page.</p>
