--- a/LigminchaGlobalApp/templates/welcome-user.html
+++ b/LigminchaGlobalApp/templates/welcome-user.html
@@ -3,6 +3,6 @@
 	<p>This is the demonstration site for the Ligmincha Global application.</p>
 	<p>You are signed in to this application with the Ligmincha Global SSO (single sign-on) system.</p>
 	<p>For information about how to use this site and what exactly it's demonstrating, please see the
-	<a href="http://wiki.ligmincha.org/LigminchaGlobal_demonstration">Ligmincha Global_demonstration</a>
+	<a href="http://wiki.ligmincha.org/LigminchaGlobal_demonstration">Ligmincha Global demonstration</a>
 	wiki page.</p>
 </div>
