--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -7,6 +7,40 @@ div.map {
 }
 
 /**
+ * Notification
+ */
+#notify p {
+	margin: 3px 0;
+}
+#notify {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 20px;
+}
+#notify div.message {
+	text-align: left;
+	font-family: sans-serif;
+	font-size: 12pt;
+	line-height: 16pt;
+	color: #333;
+	border: 1px solid #ccc;
+	background: #eee url(/images/info.png) 30px center no-repeat;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius: 10px;
+	padding: 0 50px 0 150px;
+	margin: 0 auto;
+	display: table;
+}
+#notify h1 {
+	font-size: 14pt;
+	font-weight: bold;
+	color: #666;
+	text-align: center;
+}
+
+/**
  * Ajax loader
  */
 div.loading {
