--- a/LigminchaGlobalApp/templates/welcome-anon.html
+++ b/LigminchaGlobalApp/templates/welcome-anon.html
@@ -1,6 +1,8 @@
 <div class="anon">
 	<h1>Welcome to the LigminchaGlobal application demonstration!</h1>
-	<p>The is the demonstration site for the <i>Ligmincha Global application</i>.</p>
-	<p>Please log in to you local sangha site to access this applicaiton.</p>
-	<p>Click on the title link for your local sangha from the map below.</p>
+	<ul>
+	<li>This is the demonstration site for the <i>Ligmincha Global application</i>.</li>
+	<li>Please log in to you local sangha site to access this applicaiton.</li>
+	<li>Click on the title link for your local sangha from the map below.</li>
+	</ul>
 </div>
