--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -29,7 +29,7 @@ div.map {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;
-	padding: 0 50px 0 150px;
+	padding: 10px 50px 10px 150px;
 	margin: 0 auto;
 	display: table;
 }
