change styles for toolbar to ul instead of div

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -7,8 +7,23 @@
 			<li><a>Sangha</a></li>
 		</ul>
 	</li>
+	<li>Sites&nbsp;&nbsp;▼
+		<ul>
+			<li><a>Wiki</a></li>
+			<li><a>Forum</a></li>
+			<li><a>Sangha</a></li>
+		</ul>
+	</li>
+	<li>Sites&nbsp;&nbsp;▼
+		<ul>
+			<li><a>Wiki</a></li>
+			<li><a>Forum</a></li>
+			<li><a>Sangha</a></li>
+		</ul>
+	</li>
+	<li>Foo<ul>Foo</ul></li>
 </ul>
-<ul id="personal"class="dd" style=\"float:right;\">
+<ul id="personal" class="dd">
 	<li><%-data.realname%>&nbsp;&nbsp;▼
 		<ul>
 			<li><a>Log out</a></li>
