--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -14,16 +14,37 @@
 }
 #main {
 	float: left;
-	padding-left: 20px;
+}
+#main li {
+	margin: 0 2px 0 0;
+	border-right: 1px solid #333;
 }
 #personal {
 	float: right;
-	padding-right: 20px;
+}
+#personal li {
+	margin: 0 0 0 2px;
+	border-left: 1px solid #333;
+}
+.dd {
+	background: #555;
+	padding: 0;
+	margin: 0;
+}
+.dd li {
+	padding: 0 20px;
+	background: #464646;
+	background-image: -moz-linear-gradient(center bottom , #373737, #464646 5px);
 }
 .dd, .dd ul {
-	padding: 5px 0 0 0;
 	margin: 0;
 	list-style: none;
+}
+.dd ul {
+	padding: 0;
+}
+.dd ul li {
+	background: none;
 }
 .dd a {
 	display: block;
@@ -37,7 +58,7 @@
 	text-decoration: underline;
 }
 .dd li {
-	/*float: left;*/
+	float: left;
 	text-align: left;
 	margin-bottom: 0;
 	cursor: default;
@@ -52,9 +73,10 @@
 .dd li ul li {
 	padding: 0 20px 0 10px;
 	margin-left: -1px;
+	float: none;
 }
 .dd li:hover ul, .dd li.sfhover ul {
-	top: 50px;
+	top: 25px;
 }
 
 
