add users online

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -7,25 +7,26 @@
 			<li><a>Sangha</a></li>
 		</ul>
 	</li>
-	<li>Sites&nbsp;&nbsp;▼
+	<li>Admin&nbsp;&nbsp;▼
 		<ul>
-			<li><a>Wiki</a></li>
-			<li><a>Forum</a></li>
-			<li><a>Sangha</a></li>
+			<li><a>Control panel</a></li>
+			<li><a>Manage users</a></li>
+			<li><a>Manage servers</a></li>
 		</ul>
 	</li>
-	<li>Sites&nbsp;&nbsp;▼
+	<li>Recent activity&nbsp;&nbsp;▼
 		<ul>
-			<li><a>Wiki</a></li>
-			<li><a>Forum</a></li>
-			<li><a>Sangha</a></li>
+			<li><a>Mary edited foo</a></li>
+			<li><a>Sam logged in to bar</a></li>
+			<li><a>Fred signed up to baz</a></li>
 		</ul>
 	</li>
-	<li>Foo<ul>Foo</ul></li>
+	<li><%=lg.User.chatMenu()%></li>
 </ul>
 <ul id="personal" class="dd">
 	<li><%-data.realname%>&nbsp;&nbsp;▼
 		<ul>
+			<li><a>Profile</a></li>
 			<li><a>Log out</a></li>
 		</ul>
 	</li>
