better site names

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -2,9 +2,10 @@
 	<li>Ligmincha Global Toolbar</li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
-			<li><a>Wiki</a></li>
-			<li><a>Forum</a></li>
-			<li><a>Sangha</a></li>
+			<li><a>Documentation wiki</a></li>
+			<li><a>Support forum</a></li>
+			<li><a>Ocean of wisdom</a></li>
+			<li><a>Your local sangha</a></li>
 		</ul>
 	</li>
 	<li>Admin&nbsp;&nbsp;▼
