--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -2,10 +2,9 @@
 	<li>Ligmincha Global Toolbar</li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
-			<li><a>Documentation wiki</a></li>
-			<li><a>Support forum</a></li>
-			<li><a>Ocean of wisdom</a></li>
-			<li><a>Your local sangha</a></li>
+			<li><a href="http://ligminchaglobal.organicdesign.co.nz">LigminchaGlobal application</a></li>
+			<li><a href="http://ligminchawiki.organicdesign.co.nz">Documentation wiki</a></li>
+			<li><a href="http://<%-sangha%>">Your local sangha</a></li>
 		</ul>
 	</li>
 	<li>Admin&nbsp;&nbsp;▼
@@ -25,7 +24,7 @@
 	<li><%=lg.User.chatMenu()%></li>
 </ul>
 <ul id="personal" class="dd">
-	<li><%-data.realname%>&nbsp;&nbsp;▼
+	<li><%-name%>&nbsp;&nbsp;▼
 		<ul>
 			<li><a>Profile</a></li>
 			<li><a>Log out</a></li>
