--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -4,7 +4,7 @@
 		<ul>
 			<li><a href="http://ligminchaglobal.organicdesign.co.nz">LigminchaGlobal application</a></li>
 			<li><a href="http://ligminchawiki.organicdesign.co.nz">Documentation wiki</a></li>
-			<li><a href="http://<%-sangha%>">Your local sangha</a></li>
+			<li><a href="<%-sangha%>">Your local sangha</a></li>
 		</ul>
 	</li>
 	<li>Admin&nbsp;&nbsp;▼
