--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -2,7 +2,7 @@
 	<li>Ligmincha Global Toolbar</li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
-			<li><a href="http://ligminchaglobal.organicdesign.co.nz">LigminchaGlobal application</a></li>
+			<li><a href="http://ligminchaglobal.organicdesign.co.nz/index.php">LigminchaGlobal application</a></li>
 			<li><a href="http://ligminchawiki.organicdesign.co.nz">Documentation wiki</a></li>
 			<li><a href="<%-sangha%>">Your local sangha</a></li>
 		</ul>
