--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -2,9 +2,9 @@
 	<li>Ligmincha Global Toolbar</li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
-			<li><a href="http://ligminchaglobal.organicdesign.co.nz/index.php">LigminchaGlobal application</a></li>
-			<li><a href="http://ligminchawiki.organicdesign.co.nz">Documentation wiki</a></li>
-			<li><a href="<%-sangha%>">Your local sangha</a></li>
+			<li><a href="http://ligminchaglobal.organicdesign.co.nz/index.php" target="_parent">LigminchaGlobal application</a></li>
+			<li><a href="http://ligminchawiki.organicdesign.co.nz" target="_parent">Documentation wiki</a></li>
+			<li><a href="<%-sangha%>" target="_parent">Your local sangha</a></li>
 		</ul>
 	</li>
 	<li>Admin&nbsp;&nbsp;▼
