cleanup and add some useful functions to util

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -21,7 +21,7 @@
 			<li><a>Fred signed up to baz</a></li>
 		</ul>
 	</li>
-	<li><%=lg.User.chatMenu()%></li>
+	<li><%=lg.chatMenu()%></li>
 </ul>
 <ul id="personal" class="dd">
 	<li><%-name%>&nbsp;&nbsp;▼
