only chat if logged in

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -15,7 +15,7 @@
 			<li><a>Fred signed up to baz</a></li>
 		</ul>
 	</li>
-	<li><%=lg.chatMenu()%></li>
+	<%=lg.chatMenu()%>
 </ul>
 <ul id="personal" class="dd">
 	<li><%=lg.personalMenu()%></li>
