--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -82,10 +82,15 @@ body {
 .dd li ul li {
 	padding: 0 20px 0 10px;
 	margin-left: -1px;
+	float: none;
 }
 .dd li:hover ul, .dd li.sfhover ul {
 	top: 25px;
 	left: auto;
+}
+#personal li:hover ul, #personal li.sfhover ul {
+	top: 25px;
+	float:right;
 }
 
 
