link to toolbar wiki page

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -1,5 +1,5 @@
 <ul id="main" class="dd">
-	<li><span class="hl">Ligmincha Global Toolbar</span></li>
+	<li><a class="hl" href="wiki.ligmincha.org/Ligmincha_Global_toolbar" target="_parent">Ligmincha Global Toolbar</a></li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
 			<li><a href="http://ligminchaglobal.organicdesign.co.nz/index.php" target="_parent">LigminchaGlobal application</a></li>
