--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -2,7 +2,7 @@
 	<li><a class="hl" href="http://wiki.ligmincha.org/Ligmincha_Global_toolbar" target="_parent">Ligmincha Global Toolbar</a></li>
 	<li>Sites&nbsp;&nbsp;▼
 		<ul>
-			<li><a href="http://ligminchaglobal.organicdesign.co.nz/index.php" target="_parent">LigminchaGlobal application</a></li>
+			<li><a href="http://ligminchaglobal.organicdesign.co.nz" target="_parent">LigminchaGlobal application</a></li>
 			<li><a href="http://ligminchawiki.organicdesign.co.nz" target="_parent">Documentation wiki</a></li>
 			<%=lg.sanghaLink()%>
 		</ul>
