slightly dimmer grey

--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -65,7 +65,7 @@ body {
 	padding: 5px;
 	text-decoration: none;
 	line-height: 13px;
-	color: #ccc;
+	color: #bbb;
 	cursor: pointer;
 }
 .dd a:hover {
