--- a/LigminchaGlobalApp/styles/main.css
+++ b/LigminchaGlobalApp/styles/main.css
@@ -52,7 +52,7 @@ div.map {
 div.loading {
 	width: 100%;
 	height: 100px;
-	background: url(../images/loader.gif) no-repeat center;
+	background: url(http://ligminchaglobal.organicdesign.co.nz/images/loader.gif) no-repeat center;
 }
 
 /**
