--- a/LigminchaGlobalApp/templates/server-popup.html
+++ b/LigminchaGlobalApp/templates/server-popup.html
@@ -8,11 +8,7 @@
 		<tr><th>PHP version:</th><td><%-data.php%></td></tr>
 		<tr><th>MySQL version:</th><td><%-data.mysql%></td></tr>
 		<tr><th>Web-server:</th><td><%-data.webserver%></td></tr>
-		<tr>
-			<th>Joomla version:</th>
-			<td>
-				<select><%=lg.tagList()%></select>
-			</td>
-		</tr>
+		<tr><th>Template version:</th><td><select><%=lg.tagList()%></select></td></tr>
+		<tr><th>LG extension version:</th><td><select><%=lg.tagList()%></select></td></tr>
 	</table>
 </div>
