--- a/LigminchaGlobalApp/styles/toolbar.css
+++ b/LigminchaGlobalApp/styles/toolbar.css
@@ -1,7 +1,7 @@
-div.loading {
+#lg-toolbar div.loading {
 	width: 100%;
-	height: 100px;
-	background: url(http://ligminchaglobal.organicdesign.co.nz/images/loader.gif) no-repeat center;
+	height: 28px;
+	background: url(http://ligminchaglobal.organicdesign.co.nz/images/toolbar-loader.gif) no-repeat center;
 }
 
 #lg-toolbar {
