italic server bio

--- a/LigminchaGlobalApp/templates/server-popup-anon.html
+++ b/LigminchaGlobalApp/templates/server-popup-anon.html
@@ -2,7 +2,7 @@
 	<h1><%- data.name %></h1>
 	<div><a href="http://<%-tag%>"><%-tag%></a></div>
 	<table class="server">
-		<tr><td colspan="2">This is where some general info about the sangha will go, like when it was founded and a bit about the people abd their location etc.</td></tr>
+		<tr><td colspan="2"><i>This is where some general info about the sangha will go, like when it was founded and a bit about the people abd their location etc.</i></td></tr>
 		<tr><th>Global ID:</th><td><%=id.short()%></td></tr>
 		<tr><th>IP address:</th><td>1.2.3.4</td></tr>
 	</table>
