all sanghas in sites menu

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -4,7 +4,7 @@
 		<ul>
 			<li><a href="http://ligminchaglobal.organicdesign.co.nz" target="_parent">LigminchaGlobal application</a></li>
 			<li><a href="http://ligminchawiki.organicdesign.co.nz" target="_parent">Documentation wiki</a></li>
-			<%=lg.sanghaLink()%>
+			<%=lg.sanghaLinks()%>
 		</ul>
 	</li>
 	<%=lg.adminMenu()%>
