add activity menu

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -9,11 +9,7 @@
 	</li>
 	<%=lg.adminMenu()%>
 	<li>Recent activity&nbsp;&nbsp;▼
-		<ul>
-			<li><a>Mary edited foo</a></li>
-			<li><a>Sam logged in to bar</a></li>
-			<li><a>Fred signed up to baz</a></li>
-		</ul>
+		<ul><%=lg.activity()%></ul>
 	</li>
 	<%=lg.chatMenu()%>
 </ul>
