--- a/LigminchaGlobalApp/styles/toolbar.css
+++ b/LigminchaGlobalApp/styles/toolbar.css
@@ -97,3 +97,21 @@
 #lg-toolbar #personal li:hover ul {
 	right: 10px;
 }
+
+/**
+ * Toolbar popup notification
+ */
+#lg-toolbar #popup {
+	top: 40px;
+	right: 50px;
+	position: absolute;
+	background: #464646;
+	border: 1px solid #999;
+	padding: 5px 10px;
+	border-radius: 20px;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-khtml-border-radius: 20px;
+	color: #ccc;
+	display:none;
+}
