better expire comment

--- a/LigminchaGlobalApp/templates/global-toolbar.html
+++ b/LigminchaGlobalApp/templates/global-toolbar.html
@@ -8,7 +8,7 @@
 		</ul>
 	</li>
 	<%=lg.adminMenu()%>
-	<li>Recent activity&nbsp;&nbsp;▼
+	<li id="activity">Recent activity&nbsp;&nbsp;▼
 		<ul><%=lg.activity()%></ul>
 	</li>
 	<%=lg.chatMenu()%>
