--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -305,9 +305,9 @@ text-align: left;
 .blog h2, .blog-featured .item.column-1 {
 	clear:both;
 }
-.items-leading h2 {
-	margin-top: 4em;
-	clear:both;
+.item.column-1 h2, .item.column-2 h2, .items-leading h2 {
+	padding-top: 2em;
+	clear: both;
 }
 .items-leading .leading-0 h2 {
 	margin-top: 8px;
