--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1517,7 +1517,7 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 	margin: 0 10px 5px 0;
 }
 .jshop_list_product div.product div.jshop_price {
-	font-size: 16pt;
+	font-size: 16px;
 	text-align: left;
 	margin-bottom: 0;
 }
