--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1539,6 +1539,16 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 	font-size: 10pt;
 	margin: 5px 10px 0 0;
 }
+
+
+.form-horizontal div.block_sorting_count_to_page div.control-label {
+	margin-top: 8px;
+	width: 80px;
+}
+.form-horizontal div.block_sorting_count_to_page div.controls {
+	margin-left: 95px;
+}
+
 /*
  * Donation form
  */
