css for JS4.x products

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1545,8 +1545,11 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 	margin-top: 8px;
 	width: 80px;
 }
+.form-horizontal div.box_products_sorting div.controls {
+	margin-left: 80px;
+}
 .form-horizontal div.block_sorting_count_to_page div.controls {
-	margin-left: 95px;
+	margin-left: 60px;
 }
 
 /*
