css for JS4.x products

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1541,7 +1541,7 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 }
 
 
-.form-horizontal div.block_sorting_count_to_page div.control-label {
+.form-horizontal div.box_products_sorting div.control-label {
 	margin-top: 8px;
 	width: 80px;
 }
