--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1545,6 +1545,9 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 	margin-top: 8px;
 	width: 80px;
 }
+.form-horizontal div.block_sorting_count_to_page div.control-label {
+	margin-top: 8px;
+}
 .form-horizontal div.box_products_sorting div.controls {
 	margin-left: 80px;
 }
