--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -1532,7 +1532,7 @@ div#content p.readmore	{text-align:right;margin-top:0;}
 .jshop_list_product div.product div.price_extra_info {
 	margin-bottom: 0;
 }
-.jshop_list_product div.not_available {
+.jshop_list_product .jshop div.not_available {
 	text-align: left;
 }
 .jshop_list_product div.product div.description {
