search button pos

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -97,6 +97,7 @@ body {
 #headersearch .button {
 	position: relative;
 	top: 5px;
+	margin-left: 1px;
 }
 #mod-search-searchword {
 	background: #eee;
