search button pos - 3.x only

--- a/Joomla/Template/css/template.css
+++ b/Joomla/Template/css/template.css
@@ -97,6 +97,8 @@ body {
 #headersearch .button {
 	position: relative;
 	top: 5px;
+}
+#headersearch form.form-inline .button {
 	margin-left: 1px;
 }
 #mod-search-searchword {
